syntax = "proto3";
import "google/protobuf/empty.proto";
package persistence;

enum QueueTypePersistenceGrpcEnum {
   Permanent = 0;
   AutoDelete = 1;
   PermanentWithSingleConnection = 2;
}

message QueueIndexRangeGrpcModel {
  int64 FromId = 1;
  int64 ToId = 2;
}

message QueueSnapshotGrpcModel {
  string QueueId = 1;
  repeated persistence.QueueIndexRangeGrpcModel Ranges = 2;
  persistence.QueueTypePersistenceGrpcEnum QueueType = 3;
}

message SaveQueueSnapshotGrpcRequest {
  repeated persistence.TopicAndQueuesSnapshotGrpcModel QueueSnapshot = 1;
}

message TopicAndQueuesSnapshotGrpcModel {
  string TopicId = 1;
  int64 MessageId = 2;
  repeated persistence.QueueSnapshotGrpcModel QueueSnapshots = 3;
}

service MyServiceBusQueuePersistenceGrpcService {
   rpc GetSnapshot(google.protobuf.Empty) returns (stream persistence.TopicAndQueuesSnapshotGrpcModel);
   rpc SaveSnapshot(persistence.SaveQueueSnapshotGrpcRequest) returns (google.protobuf.Empty);
}


///////////

message GetHistoryByDateGrpcRequest {
  string TopicId = 1;
  int64 FromDateTime = 2;
}

message MessageContentGrpcModel {
  int64 MessageId = 1;
  int64 Created = 2;
  bytes Data = 3;
  repeated persistence.MessageContentMetaDataItem MetaData = 4;
}

message MessageContentMetaDataItem {
  string Key = 1;
  string Value = 2;
}

service MyServiceBusHistoryReaderGrpcService {
   rpc GetByDate(persistence.GetHistoryByDateGrpcRequest) returns (stream persistence.MessageContentGrpcModel);
}


//////////////


message CompressedMessageChunkModel {
  bytes Chunk = 1;
}

message GetMessageGrpcRequest {
  string TopicId = 1;
  int64 MessageId = 2;
}

message GetMessagesPageGrpcRequest {
  string TopicId = 1;
  int64 PageNo = 2;
  int64 FromMessageId = 3;
  int64 ToMessageId = 4;
  int32 Version = 5;
}

service MyServiceBusMessagesPersistenceGrpcService {
   rpc GetMessage(persistence.GetMessageGrpcRequest) returns (persistence.MessageContentGrpcModel);
   rpc GetPageCompressed(persistence.GetMessagesPageGrpcRequest) returns (stream persistence.CompressedMessageChunkModel);
   rpc GetPage(persistence.GetMessagesPageGrpcRequest) returns (stream persistence.MessageContentGrpcModel);
   rpc SaveMessages(stream persistence.CompressedMessageChunkModel) returns (google.protobuf.Empty);
}

